examples/src/fail_tests/move_ref_outside_closure.stderr
error[E0597]: `instance` does not live long enough
  --> src/fail_tests/move_ref_outside_closure.rs:16:5
   |
11 |     let instance = BoxAndRefBuilder {
   |         -------- binding `instance` declared here
...
15 |     let mut stored_ref: Option<&'static i32> = None;
   |                         -------------------- type annotation requires that `instance` is borrowed for `'static`
16 |     instance.with_data_ref(|dref| stored_ref = Some(*dref));
   |     ^^^^^^^^ borrowed value does not live long enough
17 | }
   | - `instance` dropped here while still borrowed
